--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,51 +1,113 @@
-.container{
-    width: 90%;
-    height: 1065px;
-}
-.section1{
+.main-content{
     background-color: rgb(228, 203, 170);
-    width: 90%;
-    height: 30%;
-    padding: 20px;
-    margin: 10px;
-    float: center;
-}
-.principal{
-    width: 450px;
-    height: 450px;
+    width: 103%;
+    height: 200%;
+    padding: 5%;
+    margin: -1%;
 }
 .section{
-    background: url(../img/foto5.jpg) no-repeat;
-    background-size: cover;
-   
-    /*height: calc(100vh - 80px);*/
-    height: 750px;
-    width:110%;
+    width: 102%;
+    height: 100%;
 }
-.main-content{
+.text{
+    font-size: 150%;
+    color: black;
+    text-align: justify;
+}
+
+.frase{
+    text-align: justify;
+}
+
+.horarios{
+    text-align: center;
+}
+
+.principal{
+    height: 25%;
+    width: 25%;
+    margin: 1%;
+}
+.nosotros{
+    width: 45%;
+    height: 45%;
+    margin: 2%;
+}
+.azteca{
+    width: 45%;
+    height: 45%;
+    margin: 2%;
+}
+.vendimia{
+    width: 90%;
+    height: 90%;
+}
+
+.talleres{
+    text-align: justify; 
+}
+
+.vinos{
+    width: 15%;
+    height: 15%;
+}
+
+.wine-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 7%;
+    padding: -89;
+  }
+.wine-card {
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    margin: 2%;
+    padding: 5%;
+    text-align: center;
+    width: 30%;
+    height: 30%;
+    color: black;
+  }
+
+  .wine-card img {
+    width: 100%;
+    height: 70%;
+    border-radius: 5px;
+    margin-bottom: 2px;
+  }
+
+  .wine-card h2 {
+    margin: 0;
+  }
+
+  .wine-card p {
+    margin: 30px 0;
+  }
+
+  .button {
+    background-color: #320c2a;
+    border: none;
+    cursor: pointer;
+   }
+
+  .btn{
+    background-color: #320c2a;
+    text-decoration: none;
+    color: #fff;
+    padding: 20px 40px;
+    border-radius: 5%;
+  }
+
+  .footer{
     background-color: #320c2a;
     color: #fff;
-    width: 100%;
-    height: 1000px;
-    margin: 10% 10% -5% 5% ;
-    padding: 5%;
-}
-.images{
-    width: 450px;
-    height: 350px;
-    margin: 2%;
-    border-radius: 50%;
-}
-.images2{
-    width: 450px;
-    height: 350px;
-    float: left;
-    margin: 2%;
-    border-radius: 50%;
-}
-.footer{
-    background-color:#320c2a;
-    height: 150px;
-    padding: 10px;
-    margin-top: 90%;
-}
+    text-align: center;
+    padding: 2%;
+  }
+  
+
+
+
+  
