--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -5,7 +5,7 @@
 body{
   height: 100%; 
   font-family: 'Noto Sans', sans-serif;
-  background-color: #320c2a;
+  background-color:  rgb(228, 203, 170);
 }
 
 
@@ -67,7 +67,7 @@ button{
   border-color: #320c2a; 
   border-style: solid; 
   border-radius: 10px;  
-  width: 420px;   
+  width: 400px;   
   cursor: pointer;
 }
 
@@ -129,3 +129,4 @@ p{
   outline:0;
   border: 1px solid #97d848;
 }
+
