--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,21 +61,20 @@
   }
 .wine-card {
     background-color: #f4f4f4;
-    border-radius: 5px;
+    border-radius: 2%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     margin: 2%;
     padding: 5%;
     text-align: center;
-    width: 30%;
+    width: 35%;
     height: 30%;
-    color: black;
+    color:black;
   }
 
   .wine-card img {
     width: 100%;
     height: 70%;
-    border-radius: 5px;
-    margin-bottom: 2px;
+    border-radius: 5%;
   }
 
   .wine-card h2 {
@@ -83,21 +82,16 @@
   }
 
   .wine-card p {
-    margin: 30px 0;
+    margin: 3%;
   }
-
-  .button {
-    background-color: #320c2a;
-    border: none;
-    cursor: pointer;
-   }
 
   .btn{
     background-color: #320c2a;
     text-decoration: none;
     color: #fff;
-    padding: 20px 40px;
     border-radius: 5%;
+    font-size: 100%;
+    padding: 5%;
   }
 
   .footer{
