--- a/css/estilotienda.css
+++ b/css/estilotienda.css
@@ -9,29 +9,24 @@
 .section3{
     background-color: rgb(228, 203, 170);
     width: 90%;
-    height: 80px;
+    height: 90%;
     padding: 2%;
     margin: 10%;
 
 }
 
 
-.vino1{
-    width:40%;
-    height:250px;
-}
-
 .vinos{
-    width: 105%;
-    height: 105%;
-    padding: 5%;
+    width: 100%;
+    height: 100%;
+    padding: -100%;
     margin: -5%;
 }
 
 
 .seccion{
     width: 90%;
-    height: 80px;
+    height: 80%;
     padding: 2%;
     margin: 10%;
   }
@@ -39,11 +34,11 @@
 
 .div1{
     width:30%;
-    height: 900px;
+    height: 90%;
     background-color: #fff;
-    margin:20px;
-    padding:20px;
-    border-radius: 10px;
+    margin:2%;
+    padding:2%;
+    border-radius: 2%;
     box-shadow: 0 2px 5px rgb(0, 0, 0);
 
 }
@@ -51,11 +46,11 @@
 
 .div2{
     width:30%;
-    height: 900px;
+    height: 90%;
     background-color: #320c2a;
-    margin:20px;
-    padding:20px;
-    border-radius: 10px;
+    margin:2%;
+    padding:2%;
+    border-radius: 2%;
     box-shadow: 0 2px 5px rgb(0, 0, 0);
     color: #fff;
 }
@@ -90,4 +85,6 @@
     background-color: rgb(228, 203, 170);
     border-radius: 5%;
     padding: 5%;
+    text-decoration: none;
+    color: #320c2a;
 }
